# ML-100day-challenge

./: .gitignore  README.md  pyproject.toml
day-01/: README.md  day-1-explore-indian-food-dataset.ipynb
day-02/: day-2-explore-indian-food-dataset.ipynb
day-03/: day-3-eda-documentation.md  day-3-eda-visualize-food-dataset.ipynb
