[project]
name = "ml-100day-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Ram Sathyavageeswaran",email = "ramkrishs@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "translators (>=6.0.1,<7.0.0)",
    "googletrans (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
