[project]
name = "ml-100day-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Ram Sathyavageeswaran",email = "ramkrishs@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "translators (>=6.0.1,<7.0.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "google-cloud-translate (==2.0.1)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "networkx (>=3.5,<4.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "pyvis (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
